# EA_PlutusExamples

./: .gitignore  01 - OurFirstRedeemer.hs  02 - TypedValidator.hs  03 - CustomTypedValidator.hs  04 - VestingContract.hs  08 - FreeMinting.hs  09 - SignedMinting.hs  14 - GuessingGame.hs  A1 - VestingContractwithPwd.hs  AA - BasicPlutusPlayground.hs  DCU_Protocol.md  Demeter.run walkthruough.md  NFTMarket_Protocol.md  README.md  SC1 - give.sh  SC2 - grab.sh  TestnetPublication.md  install_linux.md
.devcontainer/: Dockerfile
DemeterAndDocker/: cabal.project
DemeterAndDocker/1_JustValidators/: HandsOn002.md  HandsOn004.md  JustValidators.cabal
DemeterAndDocker/1_JustValidators/src/: AlwaysSucceedandFail.hs  AlwaysSucceedsandFails.hs  CommonConditions.hs  TooSimpleValidators.hs  TypedValidators.hs
DemeterAndDocker/1_JustValidators/testnet/: CCgive.sh  CCgrab.sh  createAddr.sh  dEr.uplc  datum22.uplc  datum23.uplc  giveV2.sh  grab.sh  grabV2.sh  helper.sh  output.txt  redeemer11.uplc
DemeterAndDocker/2_BasicExamples/: BasicExamples.cabal
DemeterAndDocker/3_NativeTokens/src/: LearnersCoin.hs  SimpleNFT.hs
DemeterAndDocker/3_NativeTokens/testnet/: burn.sh  helper.sh  mint.sh  mintEAnft.sh
DemeterAndDocker/4_SimpleGames/: HandsOn009.md  SimpleGames.cabal
DemeterAndDocker/4_SimpleGames/src/: GuessingGame.hs  MathBounty.hs
DemeterAndDocker/4_SimpleGames/testnet/: lock.sh  lockGG.sh  unlock.sh  unlockGG.sh
DemeterAndDocker/5_LendingPlatform/src/: Lending.hs  LoanNFTs.hs
DemeterAndDocker/5_LendingPlatform/testnet/: unlock.sh
DemeterAndDocker/Tests/: CHANGELOG.md  Tests.cabal  text.txt
DemeterAndDocker/Tests/src/: Main.hs  Spec.hs
DemeterAndDocker/Utilities/: Utilities.cabal
DemeterAndDocker/Utilities/src/: Wrappers.hs
PlutusApps/V2_110/JustValidators/: JustValidators.cabal
PlutusApps/V2_110/SimpleGames/: MathBounty.cabal
V1/JustValidators/: JustValidators.cabal  cabal.project
V1/JustValidators/src/: AlwaysSucceedandFail.hs  CustomTypedValidator.hs  JustRedeemer.hs  JustRedeemer2.hs  TypedValidator.hs
V1/LendingPlatform/: CHANGELOG.md  LendingV1.cabal  cabal.project
V1/LendingPlatform/src/: Collateral.hs  Interest.hs  Lending.hs  NFTmintingPolicy.hs  RequestLoan.hs
V1/LendingPlatform/testnet/: policy.id
V1/MathBounty/: MathBounty.cabal  cabal.project
V1/MathBounty/src/: MathBounty.hs  NFTBounty.hs
V1/NativeTokens/: NativeTokensV2.cabal
V1/NativeTokens/testnet/: .gitignore
V2/GuessingGame/: GuessingGameV2.cabal
V2/GuessingGame/src/: GuessingGameV2.hs
V2/JustValidators/: JustValidators.cabal
V2/JustValidators/src/: AlwaysSucceedandFailV2.hs  CustomTypedValidatorV2.hs  JustRedeemerV2.hs
V2/MathBounty/: CHANGELOG.md  MathBountyV2.cabal  cabal.project
V2/MathBounty/src/: MathBountyV2.hs  NFTBountyV2.hs
V2/NativeTokens/src/: NFTsV2.hs
V2/NativeTokens/testnet/: mintNFT.sh  nftMintV2.plutus
V2_110/: README.md
V2_110/Demeter/: cabal.project
V2_110/Demeter/1_JustValidators/: LICENSE
V2_110/Demeter/2_FromScratch/: TEST.md
V2_110/Demeter/4_SimpleGames/: SimpleGames.cabal
V2_110/Demeter/FromScratch/: FromScratch.cabal  README.md
V2_110/Demeter/JustValidators/: JustValidators.cabal  cabal.project
V2_110/Demeter/JustValidators/FromScratch/: FromScratch.cabal
V2_110/Demeter/JustValidators/FromScratch/src/: SimpleValidator.hs
V2_110/Demeter/JustValidators/src/: AlwaysSucceedandFailV2.hs  AlwaysSucceedandFailV2o.hs  CustomTypedValidatorV2.hs  CustomTypedValidatorV2o.hs  JustRedeemerV2.hs
V2_110/Demeter/JustValidators/testnet/: AF.addr  give.sh  grab.sh  mwd20.json  r19.plutus  typedDRgive.sh  typedDvR.plutus
V2_110/Demeter/JustValidators/testnet/Wallet/: .gitignore
V2_110/Demeter/NativeTokens/: NativeTokens.cabal
V2_110/Demeter/SimpleGames/: SimpleGames.cabal
V2_110/Demeter/Utils/: Mappers.hs  Utils.cabal
V2_110/DemeterAndDocker/: cabal.project
V2_110/DemeterAndDocker/1_JustValidators/: HandsOn001.md  JustValidators.cabal
V2_110/DemeterAndDocker/3_NativeTokens/: HandsOn007.md  NativeTokens.cabal
V2_110/DemeterAndDocker/5_LendingPlatform/: LendingPlatform.cabal
V2_110/DemeterAndDocker/Utilities/: Utilities.cabal
V2_110/DemeterAndDocker/Utilities/src/: Conversions.hs  Mappers.hs
V2_110/JustValidators/: JustValidators.cabal
V2_110/JustValidators/src/: AlwaysSucceedandFailV2o.hs  CustomTypedValidatorV2o.hs  ShowingmakeIsDataIndexed.hs  UsingSCvalidator.hs
V2_110/JustValidators/testnet/: dr19.addr  gived19.sh  grabV2.sh  r19.addr  typedDRgrab.sh  updateV2.sh
V2_110/LendingPlatform/: CHANGELOG.md  LendingPlataform.cabal
V2_110/LendingPlatform/src/: CustomTypedValidatorV2o.hs  RequestLoan.hs  UsingSCvalidator.hs
V2_110/LendingPlatform/testnet/: dr19.plutus
V2_110/Lucid/: README.md
V2_110/MathBounty/: CHANGELOG.md
V2_110/NativeTokens/: NativeTokensV2.cabal
preVasil_V1/: 00 - OurFirstContract.hs  01 - OurFirstRedeemer v2.hs  01 - OurFirstRedeemer.hs  02 - TypedValidator.hs  03 - CustomTypedValidator.hs  05 - ParametrizedContract.hs  06 - EmulatorTraceMonad.hs  09 - SignedMinting.hs  10 - NTFminting.hs  11 - DeadlineMinting.hs  12 - 1n0 Game.hs  13 - MathBounty.hs  13b - MathBountyDeadline.hs  14b- AdaptedGG.hs
preVasil_V1/JustValidators/: JustValidators.cabal  cabal.project
preVasil_V1/JustValidators/dist-newstyle/cache/: config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
preVasil_V1/JustValidators/dist-newstyle/src/: cardano-c_-88a67c41a056383c.cache  cardano-n_-17dfc790a23ed210.cache  cardano-p_-98329c466570048a.cache  cardano-w_-c9e033b0ec7ad11b.cache  hysterica_-6ae9e07a7cc72e97.cache  plutus-ap_-cbcc5c6ab544aad6.cache  purescrip_-fa901c7e00b7f37b.cache  servant-p_-232829bf471577c2.cache
preVasil_V1/JustValidators/src/: AlwaysSucceedandFail.hs  CustomTypedValidator.hs  JustRedeemer.hs
preVasil_V1/MathBounty/: MathBounty.cabal  README.md  TestnetPublication.md  cabal.project
preVasil_V1/MathBounty/src/: Deploy.hs  MathBounty.hs  MathBountyO.hs  NFTBounty.hs
preVasil_V1/MathBounty/testnet/: badRedeemer.json  datum.json  mathBounty.plutus
(+137 files in other folders)
