cabal-version:      2.4
name:               MathBounty
version:            0.1.0.0
synopsis:           MathBounty boostrap cabal project
homepage:
license-file:       LICENSE
author:             Roberto J. Cerrud
maintainer:         vortecsmaster@vortecsla.com
category:           Concurrency
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MathBounty
                      , MathBountyO
                      , Deploy
                      
    build-depends:    base ^>=4.14.1.0
                      , aeson -any
                      , bytestring -any
                      , cardano-api -any
                      , containers -any
                      , data-default 
                      , freer-extras -any
                      , playground-common -any
                      , plutus-contract -any
                      , plutus-ledger -any
                      , plutus-ledger-api -any
                      , plutus-ledger-constraints -any
                      , plutus-tx -any
                      , plutus-tx-plugin -any
                      , text -any
                      , lens -any
                      , serialise -any
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise