cabal-version:      3.0
name:               SimpleGames
version:            1.1.0.0
license:            MIT
license-file:       LICENSE
author:             Roberto Cerrud
maintainer:         roberto@emurgo.io
category:           SmartContract
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  MathBounty
    build-depends:    aeson
                    , base ^>=4.14.3.0
                    , bytestring
                    , cardano-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-ledger-api
                    , serialise
                    , Utilities
                    
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -fexpose-all-unfoldings -fplugin-opt