cabal-version:      3.0
name:               JustValidators
version:            1.1.0.0
synopsis:           JustValidators bootsrap cabal project
homepage:           https://www.vortecsla.com/plutus
license:            MIT
license-file:       LICENSE
author:             Roberto J. Cerrud
maintainer:         vortecsmaster@vortecsla.com
category:           Education
extra-source-files: CHANGELOG.md

library
    exposed-modules:    AlwaysSucceedandFail 
    build-depends:      base ^>=4.14.1.0
                      , aeson -any
                      , bytestring -any
                      , cardano-api -any
                      , containers -any
                      , data-default 
                      , plutus-ledger-api -any
                      , plutus-tx -any
                      , plutus-tx-plugin -any
                      , text -any
                      , serialise
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
