cabal-version:      3.0
name:               Utilities
version:            1.1.0.0
license:            MIT
license-file:       LICENSE
author:             Roberto Cerrud
maintainer:         roberto@emurgo.io
category:           SmartContract
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  Serialization, Mappers
    build-depends:    aeson
                    , base ^>=4.14.3.0
                    , base16-bytestring
                    , bytestring
                    , cardano-api
                    , cardano-crypto-class
                    , cardano-ledger-core
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-ledger-api
                    , serialise
                    , text
                    , time
                    
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -fexpose-all-unfoldings -fplugin-opt