cabal-version:      3.0
name:               FromScratch
version:            1.1.0.0
license:            MIT
license-file:       LICENSE
author:             Roberto Cerrud
maintainer:         roberto@emurgo.io
category:           SmartContract
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  SimpleValidator
    build-depends:    base ^>=4.14.3.0
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-ledger-api
                    
    hs-source-dirs:   src
    default-language: Haskell2010

common warnings
    ghc-options: -Wall -rtsopts "-xp -with-rtsops=-M400M" -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors